began recovery password function

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<form action="register.php">
 			<input type="submit" value="Register" />
 		</form>
-		<form action="recovery.php">
+		<form action="recovery_html.php">
 			<input type="submit" value="Forgot Password" />
 		</form>
 	</body>
