Added Content Security Policy

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 		<title>Login</title>
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 		<link href="style.css" rel="stylesheet" type="text/css">
+		<meta
+			http-equiv="Content-Security-Policy"
+			content="default-src 'none'; script-src 'self'; connect-src 'self'; img-src 'self'; style-src 'self';base-uri 'self';form-action 'self';" 
+  		/>
 	</head>
 	<body>
 		
