Added login with google

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body>
 		
 		<div class="login">
-		<h1>Main Page</h1>
+		<h1>Lovejoy</h1>
 		<form action="login.php">
 			<input type="submit" value="Login" />
 		</form>
