Reorganised file structure, not good, but better.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Login</title>
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-		<link href="style.css" rel="stylesheet" type="text/css">
+		<link href="css/style.css" rel="stylesheet" type="text/css">
 		<meta
 			http-equiv="Content-Security-Policy"
 			content="default-src 'none'; script-src 'self'; connect-src 'self'; img-src 'self'; style-src 'self';base-uri 'self';form-action 'self';" 
@@ -14,13 +14,13 @@
 		
 		<div class="login">
 		<h1>Lovejoy</h1>
-		<form action="login.php">
+		<form action="login/login_client.php">
 			<input type="submit" value="Login" />
 		</form>
-		<form action="register.php">
+		<form action="register/register_client.php">
 			<input type="submit" value="Register" />
 		</form>
-		<form action="recovery_html.php">
+		<form action="recovery/recovery_send_client.php">
 			<input type="submit" value="Forgot Password" />
 		</form>
 	</body>
