Location: login.php

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link href="css/style.css" rel="stylesheet" type="text/css">
 		<meta
 			http-equiv="Content-Security-Policy"
-			content="default-src 'none'; script-src 'self'; connect-src 'self'; img-src 'self'; style-src 'self';base-uri 'self';form-action 'self';" 
+			content="default-src ; script-src 'self'; connect-src 'self'; img-src 'self'; style-src 'self';base-uri 'self';form-action 'self';" 
   		/>
 	</head>
 	<body>
